# ai-foundry-agent-with-remote-mcp-using-azure-functionapp

./: .env_sample  README.md  main.py  pyproject.toml  sample_agents_mcp.py
